Proyecto revisado y corregido

--- a/etl_data.ipynb
+++ b/etl_data.ipynb
@@ -20,7 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import gzip\n",
+    "import ast\n"
    ]
   },
   {
@@ -642,10 +644,10 @@
    "source": [
     "#Cambio el tipo de dato de la columna \"price\" para poder transformar el dataframe a un archivo .parquet\n",
     "\n",
-    "# Reemplazar 'Free To Play' con 0 en la columna 'price'\n",
+    "# Reemplazo el tipo 'Free To Play' con 0 en la columna 'price'\n",
     "df_steam_games_.loc[df_steam_games_['price'] == 'Free To Play', 'price'] = 0\n",
     "\n",
-    "# Convertir la columna 'price' a tipo numérico\n",
+    "# Convierto la columna 'price' a tipo numérico\n",
     "df_steam_games_['price'] = pd.to_numeric(df_steam_games_['price'], errors='coerce')\n"
    ]
   },
@@ -1124,23 +1126,23 @@
    "source": [
     "#Transformo la columna release_date a tipo date para un mejor analisis posterior:\n",
     "\n",
-    "# Convertir la columna release_date a string para poder usar str.contains\n",
+    "# Convierto la columna release_date a string para poder usar str.contains\n",
     "df_steam_games_['release_date'] = df_steam_games_['release_date'].astype(str)\n",
     "\n",
-    "# Filtrar las filas con fechas válidas antes de la conversión\n",
+    "# Filtro las filas con fechas válidas antes de la conversión\n",
     "valid_dates_mask = df_steam_games_['release_date'].str.contains(r'\\b[0-9]{4}-[0-9]{2}-[0-9]{2}\\b', na=False)\n",
     "df_steam_games_ = df_steam_games_[valid_dates_mask]\n",
     "\n",
-    "# Convertir la columna 'release_date' a formato de fecha\n",
+    "# Convierto la columna 'release_date' a formato de fecha\n",
     "df_steam_games_['release_date'] = pd.to_datetime(df_steam_games_['release_date'], errors='coerce')\n",
     "\n",
-    "# Eliminar las filas con fechas no válidas convertidas a NaT\n",
+    "# Elimino las filas con fechas no válidas convertidas a NaN\n",
     "df_steam_games_ = df_steam_games_.dropna(subset=['release_date'])\n",
     "\n",
-    "# Extraer solo el año de la columna 'release_date'\n",
+    "# Extraigo solo el año de la columna 'release_date'\n",
     "df_steam_games_['release_year'] = df_steam_games_['release_date'].dt.year\n",
     "\n",
-    "# Mostrar el DataFrame resultante\n",
+    "# Muestro el DataFrame resultante\n",
     "print(df_steam_games_[['release_date', 'release_year']])"
    ]
   },
@@ -1291,7 +1293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convertir la columna 'id' de float64 a integer en el DataFrame df_steam_games, ignorando NaN\n",
+    "# Convierto la columna 'id' de float64 a integer en el DataFrame df_steam_games, ignorando NaN\n",
     "df_steam_games['id'] = pd.to_numeric(df_steam_games['id'], errors='coerce').fillna(0).astype(int)\n"
    ]
   },
@@ -1310,16 +1312,6 @@
    "metadata": {},
    "source": [
     "Analizando el dataset user_reviews.json.gz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import gzip\n",
-    "import ast"
    ]
   },
   {
@@ -1480,20 +1472,18 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "from pandas import json_normalize\n",
     "\n",
     "# Usa json_normalize para desanidar los datos y crear nuevas columnas\n",
     "df_reviews = json_normalize(df_user_reviews.to_dict('records'), 'reviews', ['user_id', 'user_url'])\n",
     "\n",
-    "# Ahora puedes seleccionar las columnas que deseas conservar en tu DataFrame principal\n",
-    "# Incluyendo 'recommend'\n",
+    "# Selecciono las columnas que quiero conservar del df\n",
     "df_final = df_user_reviews[['user_id', 'user_url']].merge(\n",
     "    df_reviews[['user_id', 'user_url', 'item_id', 'review', 'recommend']], \n",
     "    on=['user_id', 'user_url'], \n",
     "    how='inner'\n",
     ")\n",
-    "print(df_final)"
+    "df_final"
    ]
   },
   {
@@ -1558,7 +1548,7 @@
     "\n",
     "from nltk.sentiment import SentimentIntensityAnalyzer\n",
     "\n",
-    "# Instanciar el analizador de sentimientos de NLTK\n",
+    "# Instancio el analizador de sentimientos de NLTK\n",
     "sid = SentimentIntensityAnalyzer()\n",
     "\n",
     "# Función para asignar el sentimiento a cada reseña\n",
@@ -1575,14 +1565,13 @@
     "        else:\n",
     "            return 1  # Valor neutral en otros casos\n",
     "\n",
-    "# Aplicar la función a la columna 'review' y crear la nueva columna 'sentiment_analysis'\n",
+    "# Aplico la función a la columna 'review' y crear la nueva columna 'sentiment_analysis'\n",
     "df_final['sentiment_analysis'] = df_final['review'].apply(analyze_sentiment)\n",
     "\n",
-    "# Eliminar la columna 'review' si ya no es necesaria\n",
+    "# Elimino la columna 'review' \n",
     "df_final.drop(columns=['review'], inplace=True)\n",
     "\n",
-    "# Mostrar el DataFrame con la nueva columna\n",
-    "print(df_final)\n"
+    "df_final\n"
    ]
   },
   {
@@ -1819,9 +1808,6 @@
    "source": [
     "#Leo el archivo users_items.json y lo transformo en un dataframe\n",
     "\n",
-    "import gzip\n",
-    "import ast\n",
-    "\n",
     "data = []\n",
     "\n",
     "with gzip.open('Dataset/users_items.json.gz', 'rt', encoding='utf-8') as file:\n",
@@ -2015,7 +2001,7 @@
    "outputs": [],
    "source": [
     "#Convierto las horas a entero para poder utilizarlas en los endpoints\n",
-    "# Rellenar NaN con 0 y reemplazar inf con 0\n",
+    "# Relleno NaN con 0 y reemplazar inf con 0\n",
     "df_users_items['playtime_forever'] = df_users_items['playtime_forever'].replace([float('inf'), float('-inf')], 0)\n",
     "df_users_items['playtime_forever'] = df_users_items['playtime_forever'].fillna(0)\n",
     "df_users_items['playtime_forever'] = df_users_items['playtime_forever'].astype(int)"
