--- a/etl_data.ipynb
+++ b/etl_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tratamiento de los datos"
+    "ETL: Transformación de los datos"
    ]
   },
   {
